<resources>
    <string name="app_name" translatable="false">OpenVPN</string>
    <string name="ovpn_auth_username">Username</string>
    <string name="ovpn_no_keystore_cert_selected">You must select a User certificate</string>
    <string name="ovpn_no_ca_cert_selected">You must select a CA certificate</string>
    <string name="ovpn_no_error_found">No error found</string>
    <string name="ovpn_config_error_found">Error in Configuration</string>
    <string name="ovpn_ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="ovpn_custom_route_format_error">Error parsing the custom routes</string>
    <string name="ovpn_shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="ovpn_route_rejected">Route rejected by Android</string>
    <string name="ovpn_cancel_connection">Disconnect</string>
    <string name="ovpn_title_cancel">Cancel Confirmation</string>
    <string name="ovpn_cancel_connection_query">Disconnect the connected VPN/cancel the connection attempt?</string>
    <string name="ovpn_tun_open_error">Failed to open the tun interface</string>
    <string name="ovpn_error">"Error: "</string>
    <string name="ovpn_last_openvpn_tun_config">Opening tun interface:</string>
    <string name="ovpn_local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="ovpn_dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="ovpn_routes_info_incl">Routes: %1$s %2$s</string>
    <string name="ovpn_routes_info_excl">Routes excluded: %1$s %2$s</string>
    <string name="ovpn_routes_debug">VpnService routes installed: %1$s %2$s</string>
    <string name="ovpn_ip_not_cidr">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
    <string name="ovpn_route_not_cidr">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="ovpn_route_not_netip">Corrected route %1$s/%2$s to %3$s/%2$s</string>
    <string name="ovpn_keychain_access">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="ovpn_no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="ovpn_opentun_no_ipaddr">Refusing to open tun device without IP information</string>
    <string name="ovpn_pkcs12_file_encryption_key">PKCS12 File Encryption Key</string>
    <string name="ovpn_private_key_password">Private Key Password</string>
    <string name="ovpn_password">Password</string>
    <string name="ovpn_building_configration">Building configuration…</string>
    <string name="ovpn_netstatus">Network Status: %s</string>
    <string name="ovpn_keychain_nocacert">No CA Certificate returned while reading from Android keystore. Authentication will probably fail.</string>
    <string name="ovpn_mobile_info">%10$s %9$s running on %3$s %1$s (%2$s), Android %6$s (%7$s) API %4$d, ABI %5$s, (%8$s)</string>
    <string name="ovpn_error_rsa_sign">Error signing with Android keystore key %1$s: %2$s</string>
    <string name="ovpn_error_extapp_sign">Error signing with external authenticator app (%3$s): %1$s: %2$s</string>
    <string name="ovpn_warn_no_dns">No DNS servers being used. Name resolution may not work. Consider setting custom DNS Servers. Please also note that Android will keep using your proxy settings specified for your mobile/Wi-Fi connection when no DNS servers are set.</string>
    <string name="ovpn_dns_add_error">Could not add DNS Server \"%1$s\", rejected by the system: %2$s</string>
    <string name="ovpn_ip_add_error">Could not configure IP Address \"%1$s\", rejected by the system: %2$s</string>
    <string name="ovpn_getproxy_error">Error getting proxy settings: %s</string>
    <string name="ovpn_using_proxy">Using proxy %1$s %2$s</string>
    <string name="ovpn_minidump_generated">The application crashed unexpectedly. Please consider using the send Minidump option in the main menu</string>
    <string name="ovpn_notifcation_title">%s - %s</string>
    <string name="ovpn_session_ipv4string">%1$s - %2$s</string>
    <string name="ovpn_session_ipv6string">%1$s - %3$s, %2$s</string>
    <string name="ovpn_state_connecting">Connecting</string>
    <string name="ovpn_state_wait">Waiting for server reply</string>
    <string name="ovpn_state_auth">Authenticating</string>
    <string name="ovpn_state_get_config">Getting client configuration</string>
    <string name="ovpn_state_assign_ip">Assigning IP addresses</string>
    <string name="ovpn_state_add_routes">Adding routes</string>
    <string name="ovpn_state_connected">Connected</string>
    <string name="ovpn_state_disconnected">Disconnect</string>
    <string name="ovpn_state_reconnecting">Reconnecting</string>
    <string name="ovpn_state_exiting">Exiting</string>
    <string name="ovpn_state_noprocess">Not running</string>
    <string name="ovpn_state_resolve">Resolving host names</string>
    <string name="ovpn_state_tcp_connect">Connecting (TCP)</string>
    <string name="ovpn_state_auth_failed">Authentication failed</string>
    <string name="ovpn_state_nonetwork">Waiting for usable network</string>
    <string name="ovpn_state_waitorbot">Waiting for Orbot to start</string>
    <string name="ovpn_statusline_bytecount">↓%2$s %1$s - ↑%4$s %3$s</string>
    <string name="ovpn_notifcation_title_notconnect">Not connected</string>
    <string name="ovpn_jelly_keystore_alphanumeric_bug">Some versions of Android 4.1 have problems if the name of the keystore certificate contains non alphanumeric characters (like spaces, underscores or dashes). Try to reimport the certificate without special characters</string>
    <string name="ovpn_built_by">built by %s</string>
    <string name="ovpn_debug_build">debug build</string>
    <string name="ovpn_official_build">official build</string>
    <string name="ovpn_prompt">%1$s attempts to control %2$s</string>
    <string name="ovpn_remote_warning">By proceeding, you are giving the application permission to completely control %s and to intercept all network traffic. <b>Do NOT accept unless you trust the application. </b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="ovpn_remote_trust">I trust this application.</string>
    <string name="ovpn_screenoff_pause">Pausing connection in screen off state: less than %1$s in %2$ss</string>
    <string name="ovpn_screen_nopersistenttun">Warning: Persistent tun not enabled for this VPN. Traffic will use the normal Internet connection when the screen is off.</string>
    <string name="ovpn_save_password">Save Password</string>
    <string name="ovpn_pauseVPN">Pause VPN</string>
    <string name="ovpn_resumevpn">Resume VPN</string>
    <string name="ovpn_state_userpause">VPN pause requested by user</string>
    <string name="ovpn_state_screenoff">VPN paused - screen off</string>
    <string name="ovpn_cannotparsecert">Cannot display certificate information</string>
    <string name="ovpn_show_password">Show password</string>
    <string name="ovpn_keyChainAccessError">KeyChain Access error: %s</string>
    <string name="ovpn_unhandled_exception">Unhandled exception: %1$s\n\n%2$s</string>
    <string name="ovpn_unhandled_exception_context">%3$s: %1$s\n\n%2$s</string>
    <string name="ovpn_ip_looks_like_subnet">Vpn topology \"%3$s\" specified but ifconfig %1$s %2$s looks more like an IP address with a network mask. Assuming \"subnet\" topology.</string>
    <string name="ovpn_allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="ovpn_disallowed_vpn_apps_info">Disallowed VPN apps: %1$s</string>
    <string name="ovpn_app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="ovpn_remote_no_server_selected">You need to define and enable at least one remote server.</string>
    <string name="ovpn_ignore_multicast_route">Ignoring multicast route: %s</string>
    <string name="ovpn_service_restarted">Restarting OpenVPN Service (App crashed probably crashed or killed for memory pressure)</string>
    <string name="ovpn_no_allowed_app">No allowed app added. Adding ourselves (%s) to have at least one app in the allowed app list to not allow all apps</string>
    <string name="ovpn_abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="ovpn_permission_revoked">VPN permission revoked by OS (e.g. other VPN program started), stopping VPN</string>
    <string name="ovpn_pw_request_dialog_title">Need %1$s</string>
    <string name="ovpn_pw_request_dialog_prompt">Please enter the password for profile %1$s</string>
    <string name="ovpn_missing_tlsauth">tls-auth file is missing</string>
    <string name="ovpn_missing_certificates">Missing user certificate or user certifcate key file</string>
    <string name="ovpn_missing_ca_certificate">Missing CA certificate</string>
    <string name="ovpn_reread_log">Reread (%d) log items from log cache file</string>
    <string name="ovpn_reconnect">Reconnect</string>
    <string name="ovpn_state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
    <string name="ovpn_nought_alwayson_warning"><![CDATA[If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS]]></string>
    <string name="ovpn_deprecated_tls_remote">Config uses option tls-remote that was deprecated in 2.3 and finally removed in 2.4</string>
    <string name="ovpn_bits_per_second">%.0f bit/s</string>
    <string name="ovpn_kbits_per_second">%.1f kbit/s</string>
    <string name="ovpn_mbits_per_second">%.1f Mbit/s</string>
    <string name="ovpn_gbits_per_second">%.1f Gbit/s</string>
    <string name="ovpn_channel_name_background">Connection statistics</string>
    <string name="ovpn_channel_description_background">Ongoing statistics of the established OpenVPN connection</string>
    <string name="ovpn_channel_name_status">Connection status change</string>
    <string name="ovpn_channel_description_status">Status changes of the OpenVPN connection (Connecting, authenticating,…)</string>
    <string name="ovpn_all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="ovpn_apprest_uuid_desc">Unique UUID that identifies the profile. (example:
        0E910C15–9A85-4DD9-AE0D-E6862392E638). Generate using uuidgen or similar tools
    </string>
    <string name="ovpn_apprest_uuid">UUID</string>
    <string name="ovpn_apprest_ovpn_desc">Content of the OpenVPN configuration file. These files are usually have the extension .ovpn (sometimes also .conf) and are plain text multi line configuration files. If your MDM does not support multiline configuration entries, you can also use a base64 encoded string here. A text file can be converted to base64 using openssl base64 -A -in</string>
    <string name="ovpn_apprest_ovpn">Config</string>
    <string name="ovpn_apprest_name_desc">Name of the VPN profile</string>
    <string name="ovpn_apprest_name">Name</string>
    <string name="ovpn_apprest_vpnlist">List of VPN configurations</string>
    <string name="ovpn_apprest_vpnconf">VPN configuration</string>
    <string name="ovpn_apprest_ver">Version of the managed configuration schema</string>
</resources>