<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2012-2018 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<restrictions xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="lollipop">

    <restriction

        android:defaultValue="1"
        android:key="version"
        android:restrictionType="hidden"
        android:title="@string/ovpn_apprest_ver" />

    <restriction
        android:key="vpn_configuration_list"
        android:restrictionType="bundle_array"
        android:title="@string/ovpn_apprest_vpnlist">

        <restriction
            android:key="vpn_configuration"
            android:restrictionType="bundle"
            android:title="@string/ovpn_apprest_vpnconf">

            <restriction
                android:description="@string/ovpn_apprest_uuid_desc"
                android:key="uuid"
                android:restrictionType="string"
                android:title="@string/ovpn_apprest_uuid" />

            <restriction
                android:description="@string/ovpn_apprest_name_desc"
                android:key="name"
                android:restrictionType="string"
                android:title="@string/ovpn_apprest_name" />

            <restriction
                android:description="@string/ovpn_apprest_ovpn_desc"
                android:key="ovpn"
                android:restrictionType="string"
                android:title="@string/ovpn_apprest_ovpn" />
        </restriction>
    </restriction>
</restrictions>